--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <title>iQ Pool</title>
+      <title>App_Home</title>
       <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -40,7 +40,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   </head>
-  <body class="igx-typography">
+  <!--body class="igx-typography" style="background-color: rgb(192, 196, 218);"-->
+  <body class="igx-typography" style="background-color: #1e1b1b;"></body>
     <app-root>
       <div class="container">
         <div class="d-flex justify-content-center" style="height:450px;">
