--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="es">
   <head>
     <meta charset="utf-8">
       <title>App_Home</title>
@@ -9,10 +9,8 @@
       <!-- Bootstrap CSS -->
   	<link rel="stylesheet" href="assets/css/bootstrap.css">
   	<link rel="stylesheet" href="assets/css/bootstrap4-toggle.min.css">
-    <link rel="stylesheet" href="assets/css/navbar-top-fixed.css">
     <link rel="stylesheet" href="assets/css/bootstrap-select.css">
-    <link rel="stylesheet" href="assets/css/carousel.css">
-    <!--link rel="icon" href="assets/img/favicon.ico"-->
+    <link rel="stylesheet" href="assets/css/dashboard.css">
     <link rel="icon" href="assets/img/favicon.svg">
     <!--link rel="stylesheet" href="http://allfont.es/allfont.css?fonts=asap" type="text/css" /-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap" >
@@ -25,33 +23,11 @@
   	<script src="assets/js/bootstrap4-toggle.min.js"></script>
   	<script src="assets/js/bootstrap-select.js"></script>
     <script src="assets/js/script.js"></script>
-  	<!--script src="https://kit.fontawesome.com/87319522d8.js" crossorigin="anonymous"></script-->
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
-  	<script src="assets/js/Chart.min.js"></script>
-  	<script src="assets/js/utils.js"></script>
-  	<script type="text/javascript" src="assets/js/raphael-min.js"></script>
-  	<script type="text/javascript" src="assets/js/kuma-gauge.jquery.js"></script>
-
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   </head>
-  <!--body class="igx-typography" style="background-color: rgb(192, 196, 218);"-->
-  <body class="igx-typography" style="background-color: #1e1b1b;"></body>
+    <!--body class="igx-typography" style="background-color: #1e1b1b;"-->
     <app-root>
-      <div class="container">
-        <div class="d-flex justify-content-center" style="height:450px;">
-          <div class="spinner-border text-primary align-self-center" role="status">
-            <span class="sr-only">Loading...</span>
-          </div>
-        </div>
-      </div>
-    </app-root>
+    
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  </body>
 </html>
