--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,22 @@
     <script src="assets/js/script.js"></script>
 
   </head>
-    <!--body class="igx-typography" style="background-color: #1e1b1b;"-->
+  <body style="background-color: rgb(17, 18, 23);">
     <app-root>
+      <div class="container">
+        <div class="d-flex justify-content-center">
+          <div class="spinner-border text-primary align-self-center" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
+      </div>
+    </app-root>
+  </body>
+
+
+
+    <!--body class="igx-typography" style="background-color: #1e1b1b;"-->
+    <!--app-root-->
     
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
